# ZORA

./: .env.example  .gitignore  12.0.0  4.12.0  Dockerfile.zora  README.md  check_docker.bat  clear_memory.py  create_collection.json  create_ft_index.json  deployment_config.json  docker-compose.yml  duckduckgo_test.html  final_check.py  index_full.txt  index_full2.txt  index_result.txt  index_result2.txt  index_result3.txt  install_dependencies.bat  its_site_map.json  package-lock.json  package.json  pyproject.toml  reinstall_docker_and_setup_zora.bat  requirements-docker-simple.txt  requirements-docker.txt  requirements.txt  run_indexer.bat  run_rag_evaluation.py  setup_docker_and_qdrant.bat  simple_web_search.py  start_zora.bat  tailwind.config.cjs  task_progress.md  test_browser.txt  test_browser5.txt  test_out2.txt  test_output.txt  test_output2.txt  (+3 more)
_node_modules_bak/: .package-lock.json
agents/: __init__.py  accountant.py  base.py  cfo.py  chief_accountant.py  developer_assistant.py  economist.py  inspector.py  logistician.py  monitor.py  operator_1c_local.py  parser_agent.py  purchaser.py  reporter.py  sales_consultant.py  sales_manager.py  smm.py  support.py  website.py
collectors/: __init__.py  base.py  its_collector.py  onec_collector.py  onec_collector_universal.py  ukorona_collector.py
config/: distributed_models.py
connectors/: deepseek_client.py  deepseek_v4_client.py  embed_client.py  embedding_client.py  llm_client.py  llm_client_distributed.py  moysklad_api.py  official_sources.py  ollama_client.py  onec_mcp.py  onec_rest.py  ozon_api.py  wb_api.py  (+4 more)
(+92 files in other folders)
