[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zora"
version = "0.1.0"
description = "Zootopia Operational Resource Assistant — ИИ-ядро для автоматизации бизнеса"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
keywords = ["AI", "LLM", "automation", "enterprise", "1C"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zora*", "core", "agents", "connectors", "tools", "workflows", "memory"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]
all = [
    "chromadb",
    "sentence-transformers",
    "pywin32",
    "pandas",
    "numpy"
]

[project.scripts]
zora-run = "main:main"
zora-test = "tests.test_ollama:test_model"